--- a/static/css/neighbourhood.css
+++ b/static/css/neighbourhood.css
@@ -3,3 +3,14 @@
     height: 90vh;
     background-color: grey;
 }
+
+.title {
+    background-color: #071b5f;
+    color: white;
+    padding: 5px;
+}
+
+.places {
+    font-size: 12px;
+    background-color: #fcf8be;
+}
